[metadata]
name = html2docx
version = 1.4.1
url = https://github.com/erezlife/html2docx
author = eRezLife
author_email = noreply@erezlife.com
maintainer = eRezLife
maintainer_email = noreply@erezlife.com
description = Convert valid HTML input to docx.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
install_requires =
    python-docx
    tinycss2
python_requires = >=3.6
packages = html2docx
include_package_data = true
zip_safe = false

[flake8]
max-line-length = 88

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = html2docx
line_length = 88
multi_line_output = 3
